[package]
name = "esrtool"
version = "0.1.1"
edition = "2021"
authors = ["Ali Raheem <crates.io@shoryuken.me>"]
license = "MIT"
description = "Port of the PS2 Homebrew ESRtool to Rust and modern platforms."
readme = "README.md"
homepage = "https://github.com/ali-raheem/esrtool_rs"
repository = "https://github.com/ali-raheem/esrtool_rs"
keywords = ["PS2", "retro", "gaming", "homebrew", "ESR"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"