[package]
name = "esrtool"
version = "0.3.3"
edition = "2021"
authors = ["Ali Raheem <crates.io@shoryuken.me>"]
license = "MIT"
description = "Port of the PS2 Homebrew ESRtool to Rust and modern platforms."
readme = "README.md"
homepage = "https://github.com/ali-raheem/esrtool"
repository = "https://github.com/ali-raheem/esrtool"
keywords = ["PS2", "retro", "gaming", "homebrew", "ESR"]
categories = ["command-line-utilities"]

[dependencies]
